<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mark_dailog_frame">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minnatdormiz"
        android:background="@drawable/mark_dailog_frame_head"
        android:textSize="@dimen/eighteen_dp"
        android:gravity="center"
        android:textColor="#fff"
        android:paddingTop="@dimen/five_dp"
        android:paddingBottom="@dimen/five_dp"/>
    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_dp"
        android:src="@drawable/heart"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginBottom="@dimen/twenty_dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biz_siz_bilan_bog_lanamiz"
        android:textSize="@dimen/fourteen_dp"
        android:textStyle="bold"
        android:textColor="#262626"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/discriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:text="@string/tushuntirish"
        android:gravity="center"
        android:textSize="@dimen/fourteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:textColor="#262626"
        />
    <TextView
        android:id="@+id/tvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/diaolog_buttons"
        android:text="@string/kutish"
        android:gravity="center"
        android:textSize="@dimen/eighteen_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:paddingTop="@dimen/five_dp"
        android:paddingBottom="@dimen/five_dp"
        android:paddingRight="@dimen/sixty_dp"
        android:paddingLeft="@dimen/sixty_dp"
        android:layout_gravity="center"
        android:textColor="#262626"
        android:layout_marginBottom="@dimen/twenty_dp"/>
</LinearLayout>