<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isoma.homiladavridoctor.fragments.TestlarCarcasFragment"
    android:clickable="true"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryDark"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/five_dp"
        android:layout_marginLeft="@dimen/five_dp"
        android:layout_marginBottom="@dimen/five_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingLeft="0dp"
        android:paddingBottom="0dp"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/five_dp"
            android:background="?attr/colorPrimary"
            android:paddingRight="@dimen/five_dp"
            android:paddingTop="0dp"
            android:id="@+id/kuninibil"

            android:onClick="imo1"
            android:nestedScrollingEnabled="true">

            <ImageView
                android:layout_width="@dimen/eighty_dp"
                android:layout_height="@dimen/eighty_dp"
                android:src="@drawable/iconadat"
                android:id="@+id/ima1"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:paddingLeft="@dimen/ten_dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/first_test_title"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="@dimen/twelve_dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/first_test_info"
                    android:textColor="#8dffffff"
                    android:layout_weight="1"
                    android:textSize="@dimen/ten_dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/five_dp"
            android:background="?attr/colorPrimary"
            android:padding="0dp"
            android:id="@+id/jinsi"
            >

            <ImageView
                android:layout_width="@dimen/eighty_dp"
                android:layout_height="@dimen/eighty_dp"
                android:src="@drawable/iconajins"
                android:id="@+id/ima2"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/ten_dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/second_test_title"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="@dimen/twelve_dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/second_test_info"
                    android:textColor="#8dffffff"
                    android:layout_weight="1"
                    android:textSize="@dimen/ten_dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/five_dp"
            android:background="?attr/colorPrimary"
            android:padding="0dp"
            android:id="@+id/ogirtest"
            >

            <ImageView
                android:layout_width="@dimen/eighty_dp"
                android:layout_height="@dimen/eighty_dp"
                android:src="@drawable/iconaov"
                android:id="@+id/ima3"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:orientation="vertical"
                android:paddingLeft="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/third_test_title"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="@dimen/twelve_dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/third_test_info"
                    android:textColor="#8dffffff"
                    android:layout_weight="1"
                    android:textSize="@dimen/ten_dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/five_dp"
            android:background="?attr/colorPrimary"
            android:padding="0dp"
            android:id="@+id/belgisi"
            >

            <ImageView
                android:layout_width="@dimen/eighty_dp"
                android:layout_height="@dimen/eighty_dp"
                android:src="@drawable/iconajinsik"

                android:id="@+id/ima4"

                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/ten_dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/fourth_test_title"
                    android:textColor="#ffffff"
                    android:layout_weight="1"

                    android:gravity="bottom"
                    android:textSize="@dimen/twelve_dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/fourth_test_info"
                    android:textColor="#8dffffff"
                    android:layout_weight="1"
                    android:textSize="@dimen/ten_dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/zadiaka"
            android:orientation="horizontal"
            android:layout_marginBottom="0dp"
            android:background="?attr/colorPrimary"
            android:padding="0dp"
            >

            <ImageView
               android:layout_width="@dimen/eighty_dp"
                android:layout_height="@dimen/eighty_dp"
                android:src="@drawable/iconaxar"


                android:id="@+id/ima5"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/ten_dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/fifth_test_title"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="@dimen/twelve_dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/fifth_test_info"
                    android:textColor="#8dffffff"
                    android:layout_weight="1"
                    android:textSize="@dimen/ten_dp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </RelativeLayout>
