<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/eighty_dp"
        android:layout_weight="1"
        android:background="@color/drblue"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asalom"
            android:textSize="@dimen/twenty_five_dp"
            android:textColor="@color/white"
            android:gravity="bottom"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_weight="1"
          />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bolajak"
            android:textSize="@dimen/twenty_dp"
            android:gravity="top"
            android:layout_weight="1"
           android:layout_marginLeft="@dimen/sixteen_dp"
            android:paddingBottom="@dimen/ten_dp"
            android:textColor="@color/whfio"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="20"
        android:padding="@dimen/five_dp">
          <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/fragggg"

            android:layout_weight="8"
            android:background="@color/white"/>
    </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/thirty_dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:paddingLeft="@dimen/ten_dp"
            android:paddingBottom="@dimen/ten_dp"
            android:paddingRight="@dimen/ten_dp"
            >

            <Button
                android:id="@+id/davomi"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:background="@color/drblue"
                android:gravity="center"
                android:text="@string/davom"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_dp" />
        </FrameLayout>




</LinearLayout>